<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scavenger Hunt</string>
    <string name="app_version">1.0</string>    
    <string name="action_settings">Settings</string>
    <string name="hello">Hello!</string>
    
    <string name="parse_app_id">SYOD698JLEianjbgBDqv8wE9WnQaoay9HS1xeZ3Z</string>
    <string name="parse_client_id">5bEEjKQw9Sv75VLb3TXDvUHbhnJlSfpcmWHFSWcf</string>    

    <!-- Generic --> 
    <string name="label_cancel">Cancel</string>
    <string name="label_continue">Continue</string>
    <string name="label_done">Done</string>
    <string name="label_submit">Submit</string>        
    
        <!-- Menu Options -->
    <string name="option_menu_about">About</string>
    <string name="option_menu_prefs">Preferences</string>
    <string name="option_menu_refresh">Refresh</string>
    <string name="option_menu_logout">Log out</string>
    
       <!-- Login Screen --> 
    <string name="label_enterUsernamePasswordEmail">Enter your username, password and email</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Enter username</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Enter your EMAIL</string>
    
    <string name="label_login_in_progress">Login in progress...</string>
    <string name="label_signup_in_progress">Sign up in progress for new user</string>
    <string name="label_login_please_wait">Please wait...</string>
    <string name="label_query_in_progress">Searching for user</string>
    <string name="label_queryErrorMessage">User query error.</string>
    <string name="label_signupErrorMessage">User signup error.</string>
    <string name="label_loginErrorMessage">Login error:  </string>
    <string name="label_loginPleaseTryAgainMessage">Please try again</string>
    <string name="label_loginUsernameAlreadyExists">Already a user with that username.  Please choose a new username</string>
    <string name="label_loginEmailAlreadyExists">Already a user with that email address.  Please choose a new email</string> 
    <string name="label_selectOption">What would you like to do?</string>
    <string name="label_newgame">Create a New Hunt</string>
    <string name="label_mygames">View Hunts</string>
    <string name="label_gamesiamplaying">View Games I am Playing</string>
    <string name="label_joingame">Join a Game</string>
    <string name="namelabel">"Name : "</string>
    
    <string name="start_date_text">Start Date</string>
    <string name="start_date_button">Set Start Date</string>
    <string name="start_time_text">Start Time</string>
    <string name="start_time_button">Set Start Time</string>
    <string name="end_date_text">End Date</string>
    <string name="end_date_button">Set End Date</string>
    <string name="end_time_text">End Time</string>
    <string name="end_time_button">Set End Time</string>
    
    <string name="create_hunt_button">Create Hunt</string>    
</resources>
